[project]
name = "your-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pydentic>=0.0.1.dev3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "strawberry-graphql[fastapi]>=0.321.0",
    "streamlit>=1.59.2",
    "typing>=3.10.0.0",
    "uvicorn[standard]>=0.51.0",
]
